--- a/src/app/content.mdx
+++ b/src/app/content.mdx
@@ -10,6 +10,7 @@ I am currently learning Rust 🦀 for fun and when I am not coding I'll most lik
 ---
 
 **Projects:**
+- <ProjectLink href="https://github.com/corasan/zynk">Zynk</ProjectLink>
 - <ProjectLink href="https://apps.apple.com/gb/app/routinify-app/id6478823954?uo=2">Routinify</ProjectLink>
 - <ProjectLink href="https://testflight.apple.com/join/G9cag0Uw">Journal.md</ProjectLink>
 - <ProjectLink href="https://github.com/corasan/eas-env">eas-env</ProjectLink>
