add departure mono font

--- a/src/app/content.mdx
+++ b/src/app/content.mdx
@@ -1,13 +1,14 @@
 import Link from 'next/link'
 import { ProjectLink } from '~/components/ProjectLink'
 import { Linkedin, Twitter, Github, Mail } from 'lucide-react'
+import Image from 'next/image'
 
-# Hello there 👋🏽
- 
+# Hello there
+
 I'm **Henry Paulino**. I have a passion for building beautiful user-friendly web and mobile applications using React and React Native.
-I am currently learning Rust 🦀 for fun and when I am not coding I'll most likely be playing Destiny 2.
+I am currently learning Rust for fun and when I am not coding I'll most likely be playing Destiny 2.
 
----
+<br />
 
 **Projects:**
 - <ProjectLink href="https://github.com/corasan/zynk">Zynk</ProjectLink>
