light/dark mode

--- a/src/app/content.mdx
+++ b/src/app/content.mdx
@@ -20,10 +20,10 @@ I am currently learning Rust for fun and when I am not coding I'll most likely b
 
 <div className="flex flex-row gap-4 mt-12">
   <Link href="https://www.linkedin.com/in/henrypl95/">
-    <Linkedin size={18} color="#3c68af" />
+    <Linkedin size={18} />
   </Link>
   <Link href="https://twitter.com/henrypl_dev">
-    <Twitter size={18} color="#3eb1f9" />
+    <Twitter size={18} />
   </Link>
   <Link href="https://github.com/corasan">
     <Github size={18} />
