--- a/src/app/content.mdx
+++ b/src/app/content.mdx
@@ -15,6 +15,7 @@ I am currently learning Rust for fun and when I am not coding I'll most likely b
 - <ProjectLink href="https://apps.apple.com/gb/app/routinify-app/id6478823954?uo=2">Routinify</ProjectLink>
 - <ProjectLink href="https://github.com/corasan/eas-env">eas-env</ProjectLink>
 - <ProjectLink href="https://github.com/corasan/react-native-modal-sheet">@corasan/modal-sheet</ProjectLink>
+- <ProjectLink href="https://github.com/corasan/nitro-image-compressor">@corasan/image-compressor</ProjectLink>
 
 
 <div className="flex flex-row gap-4 mt-12">
