--- a/src/app/content.mdx
+++ b/src/app/content.mdx
@@ -13,6 +13,7 @@ I am currently learning Rust for fun and when I am not coding I'll most likely b
 **Projects:**
 - <ProjectLink href="https://github.com/corasan/zynk">Zynk</ProjectLink>
 - <ProjectLink href="https://apps.apple.com/gb/app/routinify-app/id6478823954?uo=2">Routinify</ProjectLink>
+- <ProjectLink href="https://apps.apple.com/us/app/cora-private-ai/id6738960374">Cora</ProjectLink>
 - <ProjectLink href="https://github.com/corasan/eas-env">eas-env</ProjectLink>
 - <ProjectLink href="https://github.com/corasan/react-native-modal-sheet">@corasan/modal-sheet</ProjectLink>
 - <ProjectLink href="https://github.com/corasan/nitro-image-compressor">@corasan/image-compressor</ProjectLink>
